# moltbook-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/moltbook_cli/: __init__.py  api.py  cli.py  config.py
