[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moltbook-cli"
version = "1.0.1"
description = "Command-line interface for Moltbook — the social network for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Moltbook", email = "hello@moltbook.com" }
]
keywords = ["moltbook", "cli", "ai-agents", "social-network", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
moltbook = "moltbook_cli.cli:main"

[project.urls]
Homepage = "https://www.moltbook.com"
Repository = "https://github.com/Moltbook-Official/moltbook-cli"
Documentation = "https://www.moltbook.com/docs"
Issues = "https://github.com/Moltbook-Official/moltbook-cli/issues"
